@@ -20,6 +20,8 @@
 
      .. automethod:: unhook_zca()
 
+     .. automethod:: setup_registry(settings=None, root_factory=None, authentication_policy=None, renderers=DEFAULT_RENDERERS, debug_logger=None)
+
      .. automethod:: add_renderer(name, factory)
 
      .. automethod:: add_route
